fixed spacing at bottom of DonorRequestGroupBrowser

--- a/client/src/components/organisms/style/DonorRequestGroupBrowser.scss
+++ b/client/src/components/organisms/style/DonorRequestGroupBrowser.scss
@@ -1,4 +1,6 @@
 .donor-request-group-browser {
+  padding-bottom: 33px;
+
   &-header {
     font-weight: bold;
     font-size: 28px;
